# TabularQual

./: .gitignore  PLAN.md  README.md  api_demo.py  app.py  main.py  pyproject.toml  python_api_example.py  requirements.txt  test.ipynb
.streamlit/: config.toml
LM-Annotator-test/: Annotation_from_spreadsheet.ipynb  Build_model.ipynb  Clean_casq.ipynb  Node_annotation_Zerrouk2024.ipynb  SBML2bnet.ipynb  Transition_annotation.ipynb  test.sbml  tools.py
TabularQual_converter/: cli.py  convert_sbml_to_spreadsheet.py  convert_spreadsheet_to_sbml.py  expr_parser.py  sbml_reader.py  sbml_writer.py  spec.py  spreadsheet_reader.py  spreadsheet_writer.py  tools.py  types.py
converter/: __init__.py  cli.py  convert_sbml_to_spreadsheet.py  convert_spreadsheet_to_sbml.py  expr_parser.py  sbml_reader.py  sbml_writer.py  spec.py  spreadsheet_reader.py  spreadsheet_writer.py  types.py
doc/: SpreadSBML specification.html  TabularQual_specification_v0.1.1.docx  TabularQual_specification_v0.1.2.docx  TabularQual_specification_v0.1.3.docx  TabularQual_specification_v0.1.4.docx  specification.docx  template.xlsx  transition_rule_syntax.md
examples/: ToyExample.sbml  ToyExample.xlsx  ToyExample_multivalue.xlsx  ToyExample_useName.xlsx
sbml/: Faure2006_MammalianCellCycle_out.sbml  ThieffryThomas1995_multivalue_out.sbml  ThieffryThomas1995_operators_out.sbml
table/: Faure2006_MammalianCellCycle.xlsx  ThieffryThomas1995_multivalue.xlsx  ThieffryThomas1995_operators.xlsx
tabularqual/: __init__.py  cli.py  convert_sbml_to_spreadsheet.py  convert_spreadsheet_to_sbml.py  expr_parser.py  (+6 more)
(+71 files in other folders)
