[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tabularqual"
dynamic = ["version"]
description = "Converter for logical models: spreadsheets (XLSX, CSV) <--> SBML-qual."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "python-libsbml>=5.21.0",
    "openpyxl>=3.1.5",
    "packaging>=24.0",
    "click>=8.1.8",
    "python-dateutil>=2.9.0",
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "sbmlutils>=0.9.6",
]
authors = [
    {name = "Luna Li", email = "lixy@uw.edu"},
]

[tool.setuptools.dynamic]
version = {attr = "tabularqual.spec.VERSION"}

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
to-sbml = "tabularqual.cli:to_sbml_entry"
to-table = "tabularqual.cli:to_table_entry"

[project.urls]
Homepage = "https://github.com/sys-bio/TabularQual"